--- a/excite/galaxy/custom-s3.yaml
+++ b/excite/galaxy/custom-s3.yaml
@@ -3,5 +3,5 @@ kind: service-file-storage
 service-file-storage:
   - reference: "davide-custom-s3"
     engine: s3
-    bucket_name: "davide-custom-s3"
+    bucket_suffix: "dev-davide-custom-s3"
     bucket_type: "private"
